--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
     </header>
 
     <main>
-        <div class="grid-container"></div>
+        <div class="grid">
+
+        </div>
     </main>
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit">
+</form> 
 
     <script src="script.js"></script>
 </body>
