Domain 5 Code Analysis

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Catalog | Pro Version</title>
+    <link rel="stylesheet" href="./style.css">
     </head>
 <body>
 
@@ -21,15 +22,17 @@
     </header>
 
     <main>
-        <div class="grid">
+        <div class="grid-container">
 
         </div>
     </main>
 <form>
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <label for="title">Song name:</label><br>
+  <input type="text" id="title" name="title" value="Loveeeee Song"><br>
+  <label for="genre">Genres:</label><br>
+  <input type="text" id="genre" name="genre" value="R&B"><br>
+  <label for="artist"> Artist Name:</label><br>
+  <input type="text" id="artist" name="artist" value="Rihanna"><br><br>
   <input type="submit" value="Submit">
 </form> 
 
