--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             </select>
         </div>
     </header>
+<img src="musicnote.png" alt="Description of image" class="side-image">
+
 
     <main>
         <div class="grid-container">
-
-        </div>
+<div id="div1"></div>
+             </div>
     </main>
 <form>
   <label for="title">Song name:</label><br>
